UI adjustments for smaller screen sizes and result textView adjustments

--- a/app/src/main/res/layout/content_main1.xml
+++ b/app/src/main/res/layout/content_main1.xml
@@ -58,15 +58,12 @@
         android:id="@+id/respiratoryCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:clickable="true"
         app:cardBackgroundColor="@color/secondary"
         app:cardCornerRadius="14dp"
         app:cardElevation="6dp"
         app:cardUseCompatPadding="true"
         app:contentPadding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bmi_calc_card">
 
@@ -102,34 +99,16 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:src="@android:drawable/ic_dialog_email"
-        android:tint="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <android.support.v7.widget.CardView
         android:id="@+id/cardiovascularCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         app:cardBackgroundColor="@color/secondary"
         app:cardCornerRadius="14dp"
         app:cardElevation="6dp"
         app:cardUseCompatPadding="true"
         app:contentPadding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/respiratoryCard">
 
@@ -143,7 +122,9 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="2dp"
                 android:text="@string/cardiovascular"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black"
@@ -170,7 +151,6 @@
         android:id="@+id/renal_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         app:cardBackgroundColor="@color/secondary"
         app:cardCornerRadius="14dp"
         app:cardElevation="6dp"
@@ -216,17 +196,18 @@
         android:id="@+id/leanMassCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         app:cardBackgroundColor="@color/secondary"
         app:cardCornerRadius="14dp"
         app:cardElevation="6dp"
-
         app:cardUseCompatPadding="true"
         app:contentPadding="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/startAppBanner"
         app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/renal_card">
+        app:layout_constraintTop_toBottomOf="@+id/renal_card"
+        app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -265,9 +246,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="8dp"
+        android:gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/leanMassCard" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@android:drawable/ic_dialog_email"
+        android:tint="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!--        app:navGraph="@navigation/mobile_navigation1" />-->
 
