--- a/app/src/main/res/layout/fragment_first_cardiovascular.xml
+++ b/app/src/main/res/layout/fragment_first_cardiovascular.xml
@@ -38,18 +38,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/peripheral_resistance_text"
         android:textColor="@color/LightGreenYellow"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/peripheralResResult"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapText" />
+        app:layout_constraintTop_toBottomOf="@+id/mapText"
+        app:layout_constraintVertical_bias="0.045" />
 
     <EditText
         android:id="@+id/diastolicText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="8"
         android:focusable="true"
         android:hint="@string/diastolic_hint"
@@ -63,7 +67,7 @@
         android:id="@+id/heartRateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="14dp"
         android:ems="7"
         android:hint="@string/heart_rate_text"
         android:inputType="number"
@@ -88,6 +92,7 @@
         android:id="@+id/systolicText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="8"
         android:focusable="true"
@@ -102,7 +107,8 @@
         android:id="@+id/cardiacOutputText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="14dp"
         android:ems="7"
         android:hint="@string/cardiac_output_text"
         android:inputType="number"
@@ -115,6 +121,7 @@
         android:id="@+id/peripheralResistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="9"
         android:hint="@string/peripheral_resistance_text"
         android:inputType="number"
@@ -127,7 +134,8 @@
         android:id="@+id/mapText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="14dp"
         android:ems="9"
         android:hint="@string/map_text"
         android:inputType="number"
@@ -140,6 +148,7 @@
         android:id="@+id/cardiacOutputText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="7"
         android:hint="@string/cardiac_output_text"
         android:inputType="number"
@@ -153,7 +162,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="205dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="205dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -183,7 +192,7 @@
         android:id="@+id/mapPulseResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/blackGrey"
         android:textIsSelectable="true"
