--- a/app/src/main/res/layout/fragment_first_respiratory.xml
+++ b/app/src/main/res/layout/fragment_first_respiratory.xml
@@ -48,18 +48,22 @@
         android:id="@+id/rvBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="@string/rv_btn_text"
         android:textColor="@color/LightGreenYellow"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rvResult"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frcText" />
+        app:layout_constraintTop_toBottomOf="@+id/frcText"
+        app:layout_constraintVertical_bias="0.116" />
 
     <EditText
         android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:ems="8"
         android:hint="@string/tv_hint"
@@ -73,6 +77,7 @@
         android:id="@+id/irvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="8"
         android:hint="@string/irv_hint"
         android:inputType="number"
@@ -98,6 +103,7 @@
         android:id="@+id/rvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:ems="8"
         android:hint="@string/rv_hint"
@@ -111,6 +117,7 @@
         android:id="@+id/ervText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="8"
         android:hint="@string/erv_hint"
         android:inputType="number"
@@ -124,6 +131,7 @@
         android:id="@+id/irvText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:ems="8"
         android:hint="@string/irv_hint"
@@ -137,6 +145,7 @@
         android:id="@+id/tvText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="8"
         android:hint="@string/tv_hint"
         android:inputType="number"
@@ -150,6 +159,7 @@
         android:id="@+id/frcText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:ems="8"
         android:hint="@string/frc_hint"
@@ -163,6 +173,7 @@
         android:id="@+id/ervText3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="8"
         android:hint="@string/erv_hint"
         android:inputType="number"
