--- a/app/src/main/res/layout/fragment_second_renal.xml
+++ b/app/src/main/res/layout/fragment_second_renal.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="6dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="53dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -29,7 +29,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/renal_system_text2"
                 android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textIsSelectable="true"/>
 
             <ImageView
                 android:id="@+id/imageView9"
