--- a/app/src/main/res/layout/fragment_second_cardiovascular.xml
+++ b/app/src/main/res/layout/fragment_second_cardiovascular.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginBottom="53dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/cardiovascular_system_text"
                 android:textColor="@color/blackGrey"
+                android:textIsSelectable="true"
                 android:textSize="15sp" />
 
             <com.startapp.android.publish.ads.banner.Banner
