--- a/app/src/main/res/layout/fragment_second_respiratory.xml
+++ b/app/src/main/res/layout/fragment_second_respiratory.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginBottom="53dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,6 +30,7 @@
                 android:fontFamily="serif"
                 android:text="@string/respiratory_system_text"
                 android:textColor="@android:color/black"
+                android:textIsSelectable="true"
                 android:textSize="16sp" />
 
             <com.startapp.android.publish.ads.banner.Banner
